--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -9,18 +9,35 @@
     width: 100%;
     text-align: center;
   }
+
   &__title {
     font-weight: 300;
     color: $mainBlue;
-    font-size: 4.8rem;
+    font-size: 1.1rem;
     margin: 0;
+
+    @mixin atSmall {
+      font-size: 2rem;
+    }
+
+    @mixin atMedium {
+      font-size: 3.2rem;
+    }
+
+    @mixin atLarge {
+      font-size: 4.8rem;
+    }
   }
 
   &__subtitle {
     font-weight: 300;
     color: $mainBlue;
-    font-size: 2.9em;
+    font-size: 1.1em;
     margin: 0;
+
+    @mixin atSmall {
+      font-size: 2.9rem;
+    }
   }
 
   &__description {
